Update kcuStatus for multiple PCIe interfaces.  Add systemctl services to repo.

--- a/psdaq/psdaq/pgp/kcu1500/app/CMakeLists.txt
+++ b/psdaq/psdaq/pgp/kcu1500/app/CMakeLists.txt
@@ -77,6 +77,17 @@ target_link_libraries(kcuRead
    rt
 )
 
+add_executable(kcuReadBulk xReadBulk.cpp)
+
+target_include_directories(kcuReadBulk PUBLIC
+    ../../aes-stream-drivers/include
+)
+
+target_link_libraries(kcuReadBulk
+   pthread
+   rt
+)
+
 add_executable(kcuWrite xWrite.cpp)
 
 target_include_directories(kcuWrite PUBLIC
