--- a/psdaq/psdaq/cnf/lab3-ric.cnf
+++ b/psdaq/psdaq/cnf/lab3-ric.cnf
@@ -14,12 +14,15 @@ prom_cfg_dir = '/reg/g/psdm/psdatmgr/etc/config/prom'
 data_dir = '/ffb01/claus'
 
 task_set = 'taskset 0xffbfeffbfe '
-std_opts = '-P tst -d /dev/datadev_0 -C '+collect_host+' -M '+prom_cfg_dir+' -o '+data_dir
+std_opts = '-P tst -d /dev/datadev_1 -C '+collect_host+' -M '+prom_cfg_dir+' -o '+data_dir
 
 drp_cmd = task_set+'drp '+std_opts+' -l 0x1'
 bld_cmd = task_set+'drp_bld '+std_opts
 pva_cmd = task_set+'drp_pva '+std_opts+' DAQ:LAB2:PVCAM'
 ea_cmd  = task_set+'epicsArch '+std_opts+' /reg/neh/home/claus/lclsii/daq/runs/eb/epicsArch.txt'
+
+teb_cmd = task_set+'teb -P tst -C '+collect_host+' -M '+prom_cfg_dir
+meb_cmd = task_set+'monReqServer -P tst -C '+collect_host+' -M '+prom_cfg_dir+' -d -q 4'
 
 # procmgr FLAGS: <port number> static port number to keep executable
 #                              running across multiple start/stop commands.
@@ -37,20 +40,20 @@ procmgr_config = [
  {                         id:'groupca',     flags:'s',   conda:conda_rel, env:epics_env, cmd:'groupca DAQ:LAB2 2 '+groups},
  {                         id:'modca1',                   conda:conda_rel, env:epics_env, cmd:'modca DAQ:LAB2:XPM:1'},
  {                         id:'modca2',                   conda:conda_rel, env:epics_env, cmd:'modca DAQ:LAB2:XPM:2'},
- { host: collect_host,     id:'control',     flags:'spu', conda:conda_rel, env:epics_env, cmd:'control -v -C BEAM -B DAQ:LAB2 -x 2 -P tst -r /dev/null'},
+ { host: collect_host,     id:'control',     flags:'spu', conda:conda_rel, env:epics_env, cmd:'control -v -C BEAM -B DAQ:LAB2 -x 2 -P tst -r /dev/null -S 1'},
  {                         id:'control_gui', flags:'p',   conda:conda_rel,                cmd:'control_gui -H '+collect_host},
 
  # TEB
- #{ host: 'drp-tst-dev016', id:'teb16',       flags:'sxpu', conda:conda_rel, cmd:'teb -P tst -C '+collect_host+' -M '+prom_cfg_dir},
+ { host: 'drp-tst-dev016', id:'teb16',       flags:'sxpu', conda:conda_rel, cmd:teb_cmd},
 
  # MEB
- #{ host: 'drp-tst-dev016', id:'meb16',       flags:'sxpu', conda:conda_rel, cmd:'monReqServer -P tst -d -q 4 -C '+collect_host+' -M '+prom_cfg_dir},
+ { host: 'drp-tst-dev016', id:'meb16',       flags:'sxpu', conda:conda_rel, cmd:meb_cmd},
 
  # BLD
  #{ host: 'drp-tst-dev018', id:'bld_18',       flags:'xpu', conda:conda_rel, env:epics_env, cmd:bld_cmd},
 
  # PVA
- #{ host: 'drp-tst-dev015', id:'pva_15',       flags:'xpu', conda:conda_rel, env:epics_env, cmd:pva_cmd},
+ { host: 'drp-tst-dev015', id:'pva_15',       flags:'xpu', conda:conda_rel, env:epics_env, cmd:pva_cmd},
 
  # EpicsArch
  #{ host: 'drp-tst-dev015', id:'ea_15',        flags:'xpu', conda:conda_rel, env:epics_env, cmd:ea_cmd},
