--- a/psdaq/psdaq/cnf/lab3-ric.cnf
+++ b/psdaq/psdaq/cnf/lab3-ric.cnf
@@ -21,8 +21,8 @@ bld_cmd = task_set+'drp_bld '+std_opts
 pva_cmd = task_set+'drp_pva '+std_opts+' DAQ:LAB2:PVCAM'
 ea_cmd  = task_set+'epicsArch '+std_opts+' /reg/neh/home/claus/lclsii/daq/runs/eb/epicsArch.txt'
 
-teb_cmd = task_set+'teb -P tst -C '+collect_host+' -M '+prom_cfg_dir
-meb_cmd = task_set+'monReqServer -P tst -C '+collect_host+' -M '+prom_cfg_dir+' -d -q 4'
+teb_cmd = task_set+'teb -P tst -C '+collect_host+' -M '+prom_cfg_dir #+' -1 18 -2 19'
+meb_cmd = task_set+'monReqServer -P tst -C '+collect_host+' -M '+prom_cfg_dir+' -d -q 4' #+' -1 16 -2 17'
 
 # procmgr FLAGS: <port number> static port number to keep executable
 #                              running across multiple start/stop commands.
