Update HSD with TriggerEventManager module.

--- a/psdaq/psdaq/mmhw/CMakeLists.txt
+++ b/psdaq/psdaq/mmhw/CMakeLists.txt
@@ -20,6 +20,19 @@ target_include_directories(mmregtest PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
 )
 
+add_executable(mmxvc mmxvc.cc)
+
+target_include_directories(mmxvc PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
+)
+
+target_link_libraries(mmxvc
+    service
+    pthread
+    mmhw
+    rt
+)
+
 install(TARGETS mmhw
     ARCHIVE DESTINATION lib
     LIBRARY DESTINATION lib
